# Self-parking

./: .gitignore
rosP/devel/: .catkin  .rosinstall  setup.sh
rosP/devel/lib/detect/: detect_node
rosP/devel/lib/pkgconfig/: detect.pc  video_pub.pc
rosP/devel/lib/video_pub/: video_pub_node  video_pub_node1
rosP/devel/share/detect/cmake/: detectConfig.cmake
rosP/devel/share/video_pub/cmake/: video_pubConfig.cmake
rosP/src/detect/: CMakeLists.txt  package.xml
rosP/src/detect/src/: detect.cpp
rosP/src/video_pub/: CMakeLists.txt  package.xml
rosP/src/video_pub/launch/: video_pub.launch
rosP/src/video_pub/src/: video_pub.cpp
